tests/ui/diagnostic_namespace/on_const/misplaced_attr.stderr
error: `#[diagnostic::on_const]` can only be applied to trait impls
  --> $DIR/misplaced_attr.rs:4:1
   |
LL | #[diagnostic::on_const(message = "tadaa", note = "boing")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/misplaced_attr.rs:2:9
   |
LL | #![deny(misplaced_diagnostic_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `#[diagnostic::on_const]` can only be applied to trait impls
  --> $DIR/misplaced_attr.rs:8:1
   |
LL | #[diagnostic::on_const(message = "tadaa", note = "boing")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `#[diagnostic::on_const]` can only be applied to trait impls
  --> $DIR/misplaced_attr.rs:16:1
   |
LL | #[diagnostic::on_const(message = "tadaa", note = "boing")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `#[diagnostic::on_const]` can only be applied to trait impls
  --> $DIR/misplaced_attr.rs:25:5
   |
LL |     #[diagnostic::on_const(message = "tadaa", note = "boing")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

